tests/sksl/errors/InvalidToken.glsl
### Compilation failed:

error: 1: invalid token
ğŸ’©
^
1 error
